Commando: Fix miss-alignment when opened from the toolbar - fixes #789
rn=

(integrated from master branch change 9.2.1-675-g8be7f47 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -340,7 +340,7 @@
         transition: all 0.1s;
         border-radius: 0;
         
-        width: 495px;
+        width: 480px;
         background-color: @hud-selection-background;
         color: @hud-selection-foreground;
     }
